# rMonitor-tui

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  build.bat  build_all.ps1
.github/workflows/: build-linux-binary.yml  build-package-apk.yml  build-package-appimage.yml  build-package-flatpak.yml  build-windows-binary.yml
packaging/apk/: APKBUILD
packaging/appimage/: AppRun  appimage-builder.yml
packaging/aur/: PKGBUILD
packaging/completions/: generate-completions.sh
packaging/deb/: build-debian-package.sh
packaging/deb/debian/: control  postinst  prerm
packaging/desktop/: rmonitor.desktop
packaging/flatpak/: build-flatpak.sh  org.local76.rmonitor.yaml
packaging/nix/: default.nix
packaging/rpm/: build-redhat-rpm.sh  rmonitor.spec
packaging/winget/: winget.yaml
packaging/wix/: build-windows-msi.ps1  main.wxs
src/: app.rs  config.rs  diagnostics.rs  docs.rs  event_handler.rs  gpu_names.rs  helpers.rs  json.rs  logger.rs  main.rs  metrics_format.rs  modals.rs  monitor_win32.rs  network_statuses.rs  spring.rs  win32.rs
src/app/: mod.rs
src/backend/: sys_info.rs  sys_info_tests.rs
src/monitor_win32/: monitor_win32_mock.rs  monitor_win32_win.rs
src/panels/: cards.rs  details.rs  mod.rs  processes.rs
src/ui/: overlays.rs  widgets.rs
web/: index.html
