[package]
name = "rmonitor"
version = "2.5.3"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
serde_json = "1.0.150"
rcommon = { git = "https://github.com/local76/rCommon.git", branch = "main" }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.59", features = ["Win32_System_Power"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.generate-rpm]
auto-req = "no"
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/rmonitor", dest = "/usr/bin/rmonitor", mode = "755" }
]


