[package]
name = "pulse"
version = "2026.6.9"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.30"
serde_json = "1.0.150"
library = { path = "../library", features = ["interface-tui", "lifecycle-foreground", "lifecycle-background", "platform-native", "role-application", "scenes"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/x86_64-unknown-linux-musl/release/pulse", "usr/bin/pulse", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/pulse.png", "644"],
    ["packaging/desktop/pulse.desktop", "usr/share/applications/pulse.desktop", "644"],
]

[package.metadata.generate-rpm]
auto-req = "no"
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/pulse", dest = "/usr/bin/pulse", mode = "755" },
    { source = "assets/brand/app_icon.png", dest = "/usr/share/pixmaps/pulse.png", mode = "644" },
    { source = "packaging/desktop/pulse.desktop", dest = "/usr/share/applications/pulse.desktop", mode = "644" }
]
