[package]
name = "pulse"
version = "2026.6.11"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"] }
crossterm = "0.28"
sysinfo = "0.30"
serde_json = "1.0.150"
library = { path = "../library", features = ["interface-tui", "lifecycle-foreground", "lifecycle-background", "platform-native", "role-application", "scenes", "chrome"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/x86_64-unknown-linux-musl/release/pulse", "usr/bin/pulse", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/pulse.png", "644"],
    ["packaging/desktop/pulse.desktop", "usr/share/applications/pulse.desktop", "644"],
]


